# hs-cordova

./: .gitignore  README.md  config.xml
hooks/before_prepare/: cabal.sh
hs/: Makefile  README.md  Setup.hs  buildjs  hs-cordova.cabal
hs-cordova/: hs-cordova.cabal
hs-cordova-create/: README.md  config.xml
hs-cordova-create/hooks/before_prepare/: cabal.sh
hs-cordova-create/hs/src/lib/System/Cordova/: Base.hs  FileSystem.hs  Internal.hs
hs-cordova-create/www/: hs-cordova-create.cabal  hs-cordova.cabal
hs-cordova-create/www/js/: hs_util.js
hs-cordova-create/www/src/: Main.hs
hs-cordova/js/: ondeviceready.js
hs-cordova/src/System/Cordova/: Camera.hs  FileSystem.hs  Internal.hs
hs/cordova/: Setup.hs  cordova.cabal
hs/cordova-create/: cordova-create.cabal
hs/cordova-test/: cordova-test.cabal
hs/cordova/rb/: data.rb
hs/cordova/src/System/Cordova/: BatteryStatus.erb  Camera.erb  Device.erb  DeviceMotion.erb  DeviceOrientation.erb  Dialogs.erb  EventListener.hs  FileSystem.erb  Geolocation.erb  Globalization.erb  Internal.hs  NetworkInformation.erb  StatusBar.erb  Vibration.erb
hs/js/: hs_util.js
hs/rb/: clean_imports.rb  data.rb  enums.rb  records.rb
hs/src/lib/System/Cordova/: Base.hs  BatteryStatus.erb  BatteryStatus.hs  Binders.hs  Camera.erb  Camera.hs  Camera.hs.erb  Device.erb  Device.hs  Device.hs.erb  DeviceMotion.erb  DeviceMotion.hs  DeviceOrientation.erb  DeviceOrientation.hs  Dialogs.erb  Dialogs.hs  EventListener.hs  FileSystem.erb  FileSystem.hs  FileSystem.hs.erb  Geolocation.erb  Geolocation.hs  Globalization.erb  Globalization.hs  Internal.hs  Marshal.hs  Marshal.hs.erb  NetworkInformation.erb  NetworkInformation.hs  StatusBar.erb  StatusBar.hs  Vibrate.hs  Vibration.erb  Vibration.hs
hs/src/lib/System/Cordova/Camera/: CameraOptions.erb  CameraOptions.hs  DestinationType.erb  DestinationType.hs  Direction.erb  Direction.hs  EncodingType.erb  EncodingType.hs  MediaType.erb  MediaType.hs  PopoverArrowDirection.erb  PopoverArrowDirection.hs  PopoverOptions.erb  PopoverOptions.hs  SourceType.erb  SourceType.hs
hs/src/lib/System/Cordova/FileSystem/: FileErrorCode.erb  FileErrorCode.hs  Storage.erb  Storage.hs
hs/src/lib/System/Cordova/NetworkInformation/: Connection.erb  Connection.hs
hs/src/test/: HTMLT.hs  Main.hs
www/: hs-cordova-test.cabal  hs-cordova.cabal  index.html
www-create/: index.html
www-test/: index.html
www-test/lib/: fastclick.js
www/hs/: hs-cordova-test.cabal
www/hs/src/: Main.hs
www/src/: Main.hs
