name:                 hs-cordova
version:              0.1
author:               Michael Tolly
maintainer:           miketolly@gmail.com
category:             Web
build-type:           Simple
cabal-version:        >=1.10

library
  exposed-modules:
    System.Cordova.FileSystem
    System.Cordova.Camera
    System.Cordova.Base
  other-modules:
    System.Cordova.Internal
  build-depends:
    base >= 4.7 && < 4.8
    , ghcjs-base == 0.1.0.0
    , ghcjs-prim == 0.1.0.0
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall
  js-sources:
    js/hs_util.js
