name:                 hs-cordova
version:              0.1
author:               Michael Tolly
maintainer:           miketolly@gmail.com
category:             Web
build-type:           Simple
cabal-version:        >= 1.10

library
  exposed-modules:
    System.Cordova.Base
    System.Cordova.FileSystem
    System.Cordova.Camera
    System.Cordova.Device
    System.Cordova.Vibration
    System.Cordova.NetworkInformation
    System.Cordova.Dialogs
  other-modules:
    System.Cordova.Internal
  build-depends:
    base >= 4.7 && < 4.8
    , ghcjs-base == 0.1.0.0
    , ghcjs-prim == 0.1.0.0
    , data-default == 0.5.3
    , time
  hs-source-dirs:       src/lib
  default-language:     Haskell2010
  ghc-options:          -Wall -fno-warn-unused-imports
  js-sources:
    js/hs_util.js

executable hs-cordova-create
  hs-source-dirs:       src/exe
  main-is:              Main.hs
  build-depends:
    base >= 4.7 && < 4.8
    , ghcjs-base == 0.1.0.0
    , hs-cordova == 0.1
  default-language:     Haskell2010
  ghc-options:          -Wall
