name:                 hs-cordova
version:              0.1
category:             Web
build-type:           Simple
-- extra-source-files:
cabal-version:        >= 1.10

executable hs-cordova
  hs-source-dirs:       src
  main-is:              Main.hs
  -- other-modules:
  build-depends:        base >= 4.7 && < 4.8
                        , ghcjs-base == 0.1.0.0
  default-language:     Haskell2010
  ghc-options:          -Wall
