name:                 hs-cordova-create
version:              0.1
category:             Web
build-type:           Simple
cabal-version:        >= 1.10

executable hs-cordova-create
  hs-source-dirs:       src
  main-is:              Main.hs
  build-depends:
    base >= 4.7 && < 4.8
    , ghcjs-base == 0.1.0.0
    , hs-cordova
  default-language:     Haskell2010
  ghc-options:          -Wall
