name:                 cordova-test
version:              0.1
author:               Michael Tolly
maintainer:           miketolly@gmail.com
category:             Web
build-type:           Simple
cabal-version:        >= 1.10

executable cordova-test
  hs-source-dirs:       src
  main-is:              Main.hs
  other-modules:
    HTMLT
  build-depends:
    base >= 4.8 && < 4.9
    , ghcjs-base == 0.1.0.0
    , cordova == 0.1
    , data-default
    , time
    , transformers >= 0.4.0.0
    , text
  default-language:     Haskell2010
  ghc-options:          -Wall
