name:                 hs-cordova-test
version:              0.1
author:               Michael Tolly
maintainer:           miketolly@gmail.com
category:             Web
build-type:           Simple
-- extra-source-files:
cabal-version:        >= 1.10

executable hs-cordova-test
  hs-source-dirs:       src
  main-is:              Main.hs
  -- other-modules:
  build-depends:        base >= 4.7 && < 4.8
  default-language:     Haskell2010
